implemented various operations
